<resources>
    <string name="app_name">那点事儿</string>
    <string name="main_tab_home">事儿</string>
    <string name="main_tab_mine">我的</string>
    <string name="main_tab_message">消息</string>
    <string name="main_tab_find">发现</string>
    <string name="setting">设置</string>
    <string name="about">关于</string>
    <string name="score">评分</string>
    <string name="version_update">版本更新</string>
    <string name="feedback">意见反馈</string>
    <string name="post">发帖</string>
    <string name="photo">图片</string>
    <string name="logout">退出</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="female">女</string>
    <string name="male">男</string>
    <string name="no_filled">未填写</string>
    <string name="create_topic">创建话题</string>
</resources>
